# lidar_samples_core

./: CMakeLists.txt  README.md  package.xml
datasets/: .~lock.FinalSampleHCompleto.csv#  DatasetRandom2V.csv  DatasetRandomEstranhoV.csv  DatasetRandomF2V.csv  DatasetRandomF3V.csv  DatasetRandomFV.csv  DatasetRandomV.csv  FSVA.csv  FSVC.csv  FSVH.csv  FSVT.csv  FSVTA.csv  FSVTC.csv  FSVTH.csv  Results.csv  ResultsV.csv  a  approachH.csv  approachRH.csv  approachRV.csv  approachV.csv  teste  teste.csv  teste1.csv  testeV.csv
launch/: lidar.launch  lidarold.launch  simulation.launch  tag.launch
models/Seagate_1TB_Wireless_Plus_mobile_device_storage/: model.config  model.sdf
models/example_model/: model.sdf
models/example_model/material/scripts/: repeated.material
models/urdf/: lidar.gazebo.xacro  lidar.urdf.xacro
src/: calc_angulo.py  detector.py
src/classificador/: saved_model.pb
src/classificador/variables/: variables.data-00000-of-00001  variables.index
src/cnn/: cnn_pose.py  cnn_pose_angle.py  cnn_pose_torres.py  cnn_pose_vertical.py  cnn_torres.py  cnn_torres.py.save  cnn_torres_horiz.h5  cnn_torres_load.py  cnn_torres_save.py  cnn_torres_save.py.save  cnn_torres_vert.h5  cnn_vert_load.py  cnn_vert_load_LOCAL_258750.py  cnn_vert_load_REMOTE_258750.py  cnn_vert_save.py  cnnteste.py  sc_torres_horiz.sav  sc_torres_vert.sav  times.txt  times_vert.txt
src/model/: saved_model.pb
src/model/variables/: variables.data-00000-of-00001  variables.index
src/movement/: #uav.cpp#  uav.cpp  uav.cpp.save
src/plots/: plot.py  plotTime.py  plotTime.py.save  plotTime.py.save.1  plot_comparison.py  plot_time.py
src/rn/: rnH_time.txt  rnV_time.txt  rnV_time.txt.save  rnV_time.txt.save.1  rn_pose_torres.py  rn_pose_torres.py.save  rn_pose_vertical.py  rn_torres.py  rn_torres_load.py  rn_torres_ros.py  rn_torres_save.py  rn_vert_save.py  rn_vertical.py  rn_vertical_load.py  sc_torres_vert.sav  times_horiz.txt  times_vert.txt
src/sampling/: approach.cpp  approachH.cpp  collectImages.cpp  lidar_samples.cpp  lidar_samplesOLD.cpp  lidar_samples_vertical.cpp  uav_lidar.cpp
src/svm/: svmH_time.txt  svmV_time.txt  svm_pose_horiz.py  svm_pose_torres.py  svm_pose_vert.py  svm_torres.py  svm_torres_horiz.py.old  svm_torres_horiz_load.py  svm_torres_horiz_ros.py  svm_torres_horiz_save.py  svm_torres_vert.py  svm_torres_vert_load.py  svm_torres_vert_ros.py  svm_torres_vert_save.py  times.txt  times_vert.txt
src/svm/modelSave/: model_torres_vert.sav  sc_torres_horiz.sav  sc_torres_vert.sav
start/: frames.gv  session.yml  sessionBag.yml  topic_list.txt
start/custom_configs/: odometry.yaml
worlds/: MundoArvoresH.world  MundoArvoresV.world  MundoCheioH.world  MundoCheioV.world  MundoHouseH.world  MundoHouseV.world  MundoRandom.world  MundoRandomUav.world  MundoTorreH.world  MundoTorreV.world  tag.world  torre.world
(+3 files in other folders)
